Prevent buttons on the homepage from wrapping

--- a/app/webpacker/styles/links_and_buttons.scss
+++ b/app/webpacker/styles/links_and_buttons.scss
@@ -6,6 +6,7 @@
     color: $fg;
     padding: 14px 20px;
     font-size: 19px;
+    white-space: nowrap;
     border: none;
 
     &:hover {
